--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -9,8 +9,8 @@
         <li class="nav-item" th:classappend="${activeMenu == 'stock' ? 'active' : ''}">
           <a class="nav-link" href="/stock/total">Stock</a>
         </li>
-        <li class="nav-item" th:classappend="${activeMenu == 'orders' ? 'active' : ''}">
-          <a class="nav-link" href="/orders">Orders</a>
+        <li class="nav-item" th:classappend="${activeMenu == 'preparation' ? 'active' : ''}">
+          <a class="nav-link" href="/prep">Preparation</a>
         </li>
 <!--        <li class="nav-item" th:classappend="${activeMenu == 'calendar' ? 'active' : ''}">-->
 <!--          <a class="nav-link" href="/calendar">Calendar</a>-->
