--- a/src/main/resources/templates/prepNew.html
+++ b/src/main/resources/templates/prepNew.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/header :: header('SCORAC new recipe')}"/>
+<head th:replace="~{fragments/header :: header('SCORAC new order')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar('Add Recipe')}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('New Preparaion')}"></div>
 <div class="container-fluid">
-    <div class="row">
-        <div th:replace="~{fragments/sidebar :: sidebar('recipes')}"></div>
+    <div class="row bg">
+        <div th:replace="~{fragments/sidebar :: sidebar('preparation')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col col-md-4 mt-5">
@@ -13,9 +13,8 @@
                 </div>
                 <div class="col col-md-1 blank"></div>
                 <div class="col col-md-6 mt-5 ml-4 showform">
-                <div th:if="${message}" th:text="${message}"></div>
-                    <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
-                        <p>Name: <input type="text" th:field="*{name}" /></p>
+                    <div th:if="${message}" th:text="${message}"></div>
+                    <form action="#" th:action="@{/addPrep}" th:object="${prep}" method="post">
                         <div class="longlist">
                             <table id="targetTable">
                                 <thead>
@@ -38,9 +37,9 @@
             </div>
         </main>
     </div>
-    </div>
-    </div>
-        <div th:replace="~{fragments/scripts :: scripts}"></div>
-    <script th:src="@{/scripts/formPopulator.js}"></script>
+</div>
+</div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
+<script th:src="@{/scripts/formPopulator.js}"></script>
 </body>
 </html>
