--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -16,7 +16,7 @@
 <!--          <a class="nav-link" href="/calendar">Calendar</a>-->
 <!--        </li>-->
         <li class="nav-item" th:classappend="${activeMenu == 'solution' ? 'active' : ''}">
-          <a class="nav-link" href="/solution">QueryGPT</a>
+          <a class="nav-link" href="/chatquery">QueryGPT</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'wastage' ? 'active' : ''}">
           <a class="nav-link" href="/wastage">Wastage</a>
