--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -8,46 +8,31 @@
         <div th:replace="~{fragments/sidebar :: sidebar('solution')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-                <div class="col">
-                    <h4 class="py-2">Product near expire date:</h4>
-                    <table> <!-- Adding border="1" to visualize the table borders -->
-                        <tr>
-                            <th>Header 1</th>
-                            <th>Header 2</th>
-                        </tr>
-                        <tr>
-                            <td>Row 1, Cell 1</td>
-                            <td>Row 1, Cell 2</td>
-                        </tr>
-                        <tr>
-                            <td>Row 2, Cell 1</td>
-                            <td>Row 2, Cell 2</td>
-                        </tr>
-                    </table>
-                </div>
+                <div th:replace="~{fragments/expireTable :: expireTable}"></div>
             </div>
             <div class="row mt-5">
-                <div class="col">
+                <div class="col col-md-6 mt-3">
                     <div class="my-3">
                         <label for="additionalPrompt">Additional Prompt:</label></br>
-                        <textarea id="additionalPrompt" name="additionalPrompt" rows="2"></textarea>
+                        <textarea id="additionalPrompt" name="additionalPrompt" rows="2" class="w-100"></textarea>
                     </div>
+                </div>
+                <div class="col col-md-3 mt-4 ml-1">
+                    <ul id="selectedNames" class="list-group"></ul>
                 </div>
             </div>
 
             <div class="row mt-5">
-                <div class="col col-md-2">
-                    <label for="vegan">Vegan</label>
-                    <input type="checkbox" id="vegan">
-                </div>
                 <div class="col">
-                    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#prompt">Send Request</button>
+                    <button id="chatqueryButton" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#prompt">Send Request</button>
                 </div>
             </div>
 
 
         </main>
-        <div class="col"></div>
+        <div class="col">
+
+        </div>
     </div>
 </div>
 
