--- a/src/main/resources/templates/prepNew.html
+++ b/src/main/resources/templates/prepNew.html
@@ -21,7 +21,7 @@
                                 <tr>
                                     <th>Name</th>
                                     <th></th>
-                                    <th>Quantity (kg/l)</th>
+                                    <th>Quantity in grams</th>
                                 </tr>
                                 </thead>
                                 <tbody>
