--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -24,7 +24,7 @@
 
             <div class="row mt-5">
                 <div class="col">
-                    <button id="chatqueryButton" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#prompt">Send Request</button>
+                    <button id="chatqueryButton" class="btn btn-success">Send Request</button>
                 </div>
             </div>
 
