--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -13,7 +13,7 @@
                 <input type="hidden" th:field="*{customer}">
                 <div class="my-3">
                     <label for="restaurantName">Restaurant Name:</label>
-                    <input class="textfield form-control" type="text" id="restaurantName" th:field="*{restaurantName}" required placeholder="Your restaurant name">
+                    <input class="textfield form-control" type="text" id="restaurantName" th:field="*{restaurantName}" placeholder="Your restaurant name" required>
                 </div>
 
                 <!-- Updated div for the text area with class="my-3" for consistent spacing -->
