--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -9,6 +9,7 @@
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col col-md-4 mt-5">
+                    <a href="/recipes" class="btn btn-secondary mb-3">Back</a>
                     <div th:replace="~{fragments/productList :: productList}"></div>
                 </div>
                 <div class="col col-md-1 blank"></div>
@@ -16,7 +17,7 @@
                   <div th:if="${message}" th:text="${message}"></div>
                     <div class="showform">
                     <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
-                        <p>Name: <input type="text" th:field="*{name}" /></p>
+                        <p>Name: <input type="text" th:field="*{name}" required/></p>
                         <div class="longlist">
                             <table id="targetTable">
                                 <thead>
