--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="/prep">Preparation</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'solution' ? 'active' : ''}">
-          <a class="nav-link" href="/chatquery">QueryGPT</a>
+          <a class="nav-link" href="/chatquery">Recipe Ideas</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'wastage' ? 'active' : ''}">
           <a class="nav-link" href="/wastage">Wastage</a>
