--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -30,6 +30,9 @@
         <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'recipes' ? 'active' : ''}">
           <a class="nav-link" href="/recipes">Recipes</a>
         </li>
+        <li class="nav-item" th:classappend="${activeMenu == 'sale' ? 'active' : ''}">
+          <a class="nav-link" href="/sale">Sale</a>
+        </li>
       </ul>
     </div>
   </nav>
