--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -20,7 +20,7 @@
                                     <tr>
                                         <th>Name</th>
                                         <th></th>
-                                        <th>Quantity (kg/l)</th>
+                                        <th>Quantity in grams</th>
                                     </tr>
                                     </thead>
                                     <tbody>
