--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -24,7 +24,7 @@
                                 <tr>
                                     <th>Name</th>
                                     <th></th>
-                                    <th>Quantity (kg/l)</th>
+                                    <th>Quantity in grams</th>
                                 </tr>
                                 </thead>
                                 <tbody>
