--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <div th:replace="~{fragments/expireTable :: expireTable}"></div>
+                    <div th:replace="~{fragments/expireTable :: expireTable('Product near expire date:', 'true')}"></div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
