--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -8,7 +8,7 @@
         <div th:replace="~{fragments/sidebar :: sidebar('solution')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
-                <div th:replace="~{fragments/expireTable :: expireTable}"></div>
+                <div th:replace="~{fragments/expireTable :: expireTable('Select from products:','false')}"></div>
             </div>
             <div class="row mt-5">
                 <div class="col col-md-6 mt-3">
