--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="/recipes">Recipes</a>
         </li>
         <li class="nav-item" th:classappend="${activeMenu == 'sale' ? 'active' : ''}">
-          <a class="nav-link" href="/sale">Sale</a>
+          <a class="nav-link bg-light" href="/sale">Sale</a>
         </li>
       </ul>
     </div>
