chat respond style

--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -51,12 +51,10 @@
     <div class="modal-dialog">
         <div class="modal-content"> <!-- Corrected class name -->
             <div class="modal-header">
-                <h5 class="modal-title" id="modal-title">Prompt</h5>
+                <h5 class="modal-title" id="modal-title">Idea List</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <p id="answer">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
+            <div class="modal-body" id="respondWindow"> </div>
         </div>
     </div>
 </div>
