--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -168,6 +168,9 @@ table, card{
     background-color: rgba(255, 252, 239, 0.5)
 
 }
+.bold{
+    font-weight: bold;
+}
 
 @media (max-width: 767.98px) {
     .sidebar {
