--- a/src/main/resources/templates/sale.html
+++ b/src/main/resources/templates/sale.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h1>
+<h1><div th:if="${error}" th:text="${error}" style="color:red; text-align: center;"></div></h1>
 </br>
 </br>
 </br>
@@ -16,7 +17,7 @@
     <input type="number" id="recipeId" name="recipeid" required>
     <br>
     <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="quantity" required>
+    <input type="number" id="amount" name="multiplicity" required>
     <br>
     <button type="submit">Add Sale</button>
 </form>
