--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -9,11 +9,13 @@
             <main class="col-md-8 px-md-3 mt-4">
                 <div class="row">
                     <div class="col col-md-4 mt-5">
+                        <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
+                        <h6><div th:if="${error}" th:text="${error}" style="color:red; text-align: center;"></div></h6>
                         <div th:replace="~{fragments/productList :: productList}"></div>
                     </div>
                     <div class="col col-md-1 blank"></div>
                     <div class="col col-md-6 mt-5 ml-4 showform">
-                        <form th:action="@{/submit-form}" th:object="waste" method="post">
+                        <form th:action="@{/addWaste}" th:object="${productList}" method="post">
                             <div class="longlist">
                                 <table id="targetTable">
                                     <thead>
