--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col col-md-1 blank"></div>
                 <div class="col col-md-6 mt-5 ml-4 ">
-                  <div th:if="${message}" th:text="${message}"></div>
+                    <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
                     <div class="showform">
                     <form action="#" th:action="@{/addRecipe}" th:object="${recipe}" method="post">
                         <p>Name: <input type="text" th:field="*{name}" required/></p>
