--- a/src/main/resources/templates/recipesNewProduct.html
+++ b/src/main/resources/templates/recipesNewProduct.html
@@ -9,7 +9,8 @@
         <main class="col-md-8 px-md-3 mt-4">
             <div class="row">
                 <div class="col">
-                    <div th:if="${message}" th:text="${message}"></div>
+                    <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
+                    <h6><div th:if="${error}" th:text="${error}" style="color:red; text-align: center;"></div></h6>
                 </div>
             </div>
             <div class="row">
