--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -7,7 +7,7 @@
     <div class="row bg">
         <div th:replace="~{fragments/sidebar :: sidebar('setup')}"></div>
         <main class="col-md-8 px-md-3 mt-4">
-            <div th:if="${message}" th:text="${message}"></div>
+            <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
 
             <form th:action="@{/updateSetup}" th:object="${setup}" method="post" class="mt-3">
                 <input type="hidden" th:field="*{customer}">
