--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -9,30 +9,32 @@
             <main class="col-md-8 px-md-3 mt-4">
                 <div class="row">
                     <div class="col col-md-4 mt-5">
-                        <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
-                        <h6><div th:if="${error}" th:text="${error}" style="color:red; text-align: center;"></div></h6>
                         <div th:replace="~{fragments/productList :: productList}"></div>
                     </div>
                     <div class="col col-md-1 blank"></div>
-                    <div class="col col-md-6 mt-5 ml-4 showform">
-                        <form th:action="@{/addWaste}" th:object="${productList}" method="post">
-                            <div class="longlist">
-                                <table id="targetTable">
-                                    <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th></th>
-                                        <th>Quantity in grams</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <!-- Rows will be appended here -->
-                                    </tbody>
-                                </table>
-                            </div>
+                    <div class="col col-md-6 mt-5 ml-4 ">
+                        <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
+                        <h6><div th:if="${error}" th:text="${error}" style="color:red; text-align: center;"></div></h6>
+                        <div class="showform">
+                            <form th:action="@{/addWaste}" th:object="${productList}" method="post">
+                                <div class="longlist">
+                                    <table id="targetTable">
+                                        <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th></th>
+                                            <th>Quantity in grams</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <!-- Rows will be appended here -->
+                                        </tbody>
+                                    </table>
+                                </div>
 
-                            <input type="submit" value="Submit" class="btn btn-success mt-3">
-                        </form>
+                                <input type="submit" value="Submit" class="btn btn-success mt-3">
+                            </form>
+                        </div>
                     </div>
                 </div>
             </main>
