--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/userCard.css}" />
     <link rel="stylesheet" th:href="@{/calendar.css}" />
     <link rel="stylesheet" th:href="@{/reports.css}" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
 
