--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -13,7 +13,7 @@
                     <a href="/index">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="img/icons/predict.png" class="card-img-top" alt="Prediction">
+                                <img src="/img/icons/predict.png" class="card-img-top" alt="Prediction">
                                 <div class="overlay">Prediction</div>
                             </div>
                         </div>
@@ -25,7 +25,7 @@
                     <a href="/wastage">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="img/icons/expire.png" class="card-img-top" alt="Expiring">
+                                <img src="/img/icons/expire.png" class="card-img-top" alt="Expiring">
                                 <div class="overlay">Expiring Products</div>
                             </div>
                         </div>
@@ -34,10 +34,10 @@
 
                 <!-- Card 3 -->
                 <div class="col-md-6 mb-4">
-                    <a href="/stock/total">
+                    <a href="/reports/sale">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="img/icons/sale.png" class="card-img-top" alt="Sale">
+                                <img src="/img/icons/sale.png" class="card-img-top" alt="Sale">
                                 <div class="overlay">Sale</div>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                     <a href="/setup">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="img/icons/waste.png" class="card-img-top" alt="Waste">
+                                <img src="/img/icons/waste.png" class="card-img-top" alt="Waste">
                                 <div class="overlay">Waste</div>
                             </div>
                         </div>
