--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -168,9 +168,10 @@ table, card{
     background-color: rgba(255, 252, 239, 0.5)
 
 }
-.bold{
-    font-weight: bold;
+.chartbtn{
+    width: 100px;
 }
+
 
 @media (max-width: 767.98px) {
     .sidebar {
