--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -19,6 +19,9 @@
     <script th:src="@{/scripts/tooglebar.js}"></script>
     <!-- Search bar-->
     <script th:src="@{/scripts/search.js}"></script>
+    <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
 </div>
 </body>
 </html>
