--- a/src/main/resources/templates/recipeSingle.html
+++ b/src/main/resources/templates/recipeSingle.html
@@ -9,9 +9,7 @@
     <main class="col-md-8 px-md-3 mt-4">
       <div class="row">
         <div class="col">
-             <a href="/recipes" class="btn btn-secondary mt-5">Back</a>
-
-          <h2 class="mt-4"th:text="${recipe.name}">Name</h2>
+          <h4 class="mt-4" style="text-align: center"><span>Price:   </span><span th:text="${recipe.price}"></span><span> £</span></h4>
           <table class="mt-5">
             <thead>
             <tr>
@@ -26,6 +24,7 @@
             </tr>
             </tbody>
           </table>
+          <a href="/recipes" class="btn btn-secondary mt-5">Back</a>
         </div>
         </div>
     </main>
