--- a/src/main/resources/templates/reports/reportSale.html
+++ b/src/main/resources/templates/reports/reportSale.html
@@ -19,6 +19,11 @@
                     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <h2 id="TotalValue" class="p-5" style="text-align: center">0</h2>
+                </div>
+            </div>
         </main>
         <div class="col"></div>
     </div>
