--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -46,7 +46,7 @@
 
                 <!-- Card 4 -->
                 <div class="col-md-6 mb-4">
-                    <a href="/setup">
+                    <a href="/reports/waste">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
                                 <img src="/img/icons/waste.png" class="card-img-top" alt="Waste">
