--- a/src/main/resources/templates/reports/reportSale.html
+++ b/src/main/resources/templates/reports/reportSale.html
@@ -12,6 +12,7 @@
                     <button id="monthBtn" class="btn-primary btn m-1 p-1 chartbtn">Month</button>
                     <button id="weekBtn" class="btn-primary btn m-1 p-1 chartbtn">Week</button>
                     <button id="dayBtn" class="btn-primary btn m-1 p-1 chartbtn">Day</button>
+                    <input type="date" id="datePicker" class="p-1 date">
                 </div>
             </div>
             <div class="row">
