--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -172,6 +172,11 @@ table, card{
     width: 100px;
 }
 
+.date{
+    border-radius: 7px;
+    border-color: #124413;
+}
+
 
 @media (max-width: 767.98px) {
     .sidebar {
