--- a/src/main/resources/templates/editday.html
+++ b/src/main/resources/templates/editday.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<head th:replace="~{fragments/header :: header('SCORAC index page')}"/>
+<head th:replace="~{fragments/header :: header('SCORAC Add Booking')}"/>
 <body>
-<div th:replace="~{fragments/logoBar :: logoBar('Home Page')}"></div>
+<div th:replace="~{fragments/logoBar :: logoBar('Add Booking')}"></div>
 <div class="container-fluid">
     <div class="row bg img-fluid">
         <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
         <main class="col-md-8 px-md-3 mt-5">
-            <form th:action="@{/editDay}" th:object="${day}" method="post" class="mt-3">
+            <form th:action="@{/addBooking}" th:object="${booking}" method="post" class="mt-3">
+
                 <div class="my-3">
-                    <label for="bookings">Bookings Today:</label>
-                    <input class="textfield form-control" type="number" id="bookings" name="bookings" >
+                    <label for="bookingNameDate">Bookings Surname:</label>
+                    <input class="textfield form-control" type="date" id="bookingNameDate" name="bookingDate" >
                 </div>
 
-                <!-- Updated div for the text area with class="my-3" for consistent spacing -->
                 <div class="my-3">
-                    <label for="notes">Information about Restaurant:</label></br>
-                    <textarea id="notes" name="notes" rows="4"></textarea>
+                    <label for="bookingName">Bookings Surname:</label>
+                    <input class="textfield form-control" type="text" id="bookingName" name="name" >
                 </div>
+
+                <div class="my-3">
+                    <label for="numberOfPeople">Number of People:</label>
+                    <input class="textfield form-control" type="number" min="0" id="numberOfPeople" name="numberOfGuest" >
+                </div>
+
 
                 <div class="my-3">
                     <input type="submit" value="Update" class="btn btn-primary">
