--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,17 +38,21 @@
                         </div>
                         <div class="row">
                             <div class="col greenbox" >
-
-                                <p class="booking-number"><b>Today bookings:</b> </p>
-                                <p class="today-notes"><b>Notes:</b> </p>
-<!--                                <p class="greeting-id">The ID is <span th:text="${testId}"></span></p>-->
-<!--                                <p class="greeting-content">The content is <span th:text="${testContent}"></span></p>-->
+                                <h5 class="mb-2">Today bookings:  <span id="totalBookings">0</span></h5>
+                                <div id="bookingList">
+<!--                                    list of bookings-->
+                                </div>
                                 <a href="/editday" class="btn btn-success btn-sm" >
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16"><path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001"/></svg>
-                                    Edit
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16"><path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001"/></svg>-->
+                                   + Add
                                 </a>
+                                <button id="bookingRefresh" class="btn btn-primary btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+                                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+                                </svg></button>
                             </div>
                         </div>
+
                     </div>
                 </div>
                 <div class="row mt-5">
@@ -72,7 +76,7 @@
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 <script th:src="@{/scripts/calendar.js}"></script>
-<script th:src="@{/scripts/todayInfo.js}"></script>
+<script th:src="@{/scripts/Bookings.js}"></script>
 </body>
 
 </html>
