--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -20,18 +20,6 @@
                     </a>
                 </div>
 
-                <!-- Card 2 -->
-                <div class="col-md-6 mb-4">
-                    <a href="/wastage">
-                        <div class="card h-100">
-                            <div class="card-body text-center d-flex justify-content-center align-items-center">
-                                <img src="/img/icons/expire.png" class="card-img-top" alt="Expiring">
-                                <div class="overlay">Expiring Products</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
                 <!-- Card 3 -->
                 <div class="col-md-6 mb-4">
                     <a href="/reports/sale">
@@ -46,7 +34,7 @@
 
                 <!-- Card 4 -->
                 <div class="col-md-6 mb-4">
-                    <a href="/reports/waste">
+                    <a href="/setup">
                         <div class="card h-100">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
                                 <img src="/img/icons/waste.png" class="card-img-top" alt="Waste">
