--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -185,7 +185,11 @@ table, card{
     max-height: 150px;
     overflow-y: auto; /* Add vertical scrollbar if content exceeds height */
 }
-
+.bookingDel{
+    background-color: darkred;
+    color: white;
+    border-radius: 5px ;
+}
 
 @media (max-width: 767.98px) {
     .sidebar {
