--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,16 +24,7 @@
                     <div class="col col col-md-4 col-sm-12 px-2 calendar-right">
                         <div class="row text-center pt-3">
                             <div class="col text-light">
-                                <span class="text-center my-3 " th:text="${weather.description}"></span>
-                                <img th:src="${weather.description == 'Sunny and warm' ? '/img/weather/sun.png' :
-                                      weather.description == 'Rain' ? '/img/weather/rain.png' :
-                                      weather.description == 'Thunderstorms' ? '/img/weather/thunder.png' :
-                                      weather.description == 'Cloudy or overcast' ? '/img/weather/cloud.png' :
-                                      weather.description == 'Snow' ? '/img/weather/snow.png' :
-                                      weather.description == 'Fog' ? '/img/weather/fog.png' :
-                                      '/img/weather/default.png'}" class="weatherImg" alt="Weather Image"/>
-                                <span class="text-center my-3 ">20</span> &#8451;
-<!--                                <span class="text-center my-3 text-light" th:text="${weather.description}"></span>-->
+                                <h4 id="weatherCondition"></h4>
                             </div>
                         </div>
                         <div class="row">
