--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -193,6 +193,11 @@ table, card{
     height: 20px;
 }
 
+#weatherImage{
+    width: 50px;
+    height: auto;
+}
+
 @media (max-width: 767.98px) {
     .sidebar {
         width: 100vw;
