--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
                     <div class="col col col-md-4 col-sm-12 px-2 calendar-right">
                         <div class="row text-center pt-3">
                             <div class="col text-light">
-                                <h4 id="weatherCondition"></h4>
+                                <div><span id="weatherCondition"></span><span id="weatherTemp"></span><img id="weatherImage"/></div>
                             </div>
                         </div>
                         <div class="row">
