--- a/src/main/resources/static/mainLayout.css
+++ b/src/main/resources/static/mainLayout.css
@@ -182,8 +182,9 @@ table, card{
 }
 
 #bookingList {
-    max-height: 35%;
+    max-height: 43%;
     overflow-y: auto; /* Add vertical scrollbar if content exceeds height */
+    background-color: #124413;
 }
 .bookingDel{
     background-color: darkred;
