--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,13 @@
 
 		</div>
 	</div>
-</div>
 
+</div>
+<footer class="footer small">
+	<p class="text-center">© 2024 SCORAC Prototype, Roehampton Disseration Project by Grzegorz Kluz. All rights reserved.</p>
+	<p class="text-center">
+		<a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
+	</p>
+</footer>
 </body>
 </html>
