--- a/src/main/resources/templates/prepNew.html
+++ b/src/main/resources/templates/prepNew.html
@@ -40,7 +40,7 @@
             </div>
         </main>
     </div>
-</div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 <script th:src="@{/scripts/formPopulator.js}"></script>
