--- a/src/main/resources/templates/queryGPT.html
+++ b/src/main/resources/templates/queryGPT.html
@@ -41,10 +41,9 @@
 
 
         </main>
-        <div class="col">
-
-        </div>
+        <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 
 <div class="modal fade" id="prompt" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
