--- a/src/main/resources/templates/recipeSingle.html
+++ b/src/main/resources/templates/recipeSingle.html
@@ -30,6 +30,7 @@
     </main>
     <div class="col"></div>
   </div>
+  <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 <!--    <script th:src="@{/scripts/formPopulator.js}"></script>-->
