--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -42,6 +42,7 @@
             </div>
         </main>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
     </div>
     </div>
         <div th:replace="~{fragments/scripts :: scripts}"></div>
