--- a/src/main/resources/templates/editday.html
+++ b/src/main/resources/templates/editday.html
@@ -34,6 +34,7 @@
         </main>
         <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
