--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,67 +7,68 @@
         <div class="row bg">
             <div th:replace="~{fragments/sidebar :: sidebar('index')}"></div>
             <main class="col-md-8 px-md-3 mt-5">
-                <div class="row">
-                    <div class="col col-sm-12 col-md-7 bg-light calendar-left">
-                        <div class="calendar-header">
-                            <button id="prev" class="btn arrow-btn">&lt</button>
-                            <h4 id="monthYear"></h4>
-                            <button id="next" class="btn arrow-btn">&gt</button>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-7 bg-light calendar-left">
+                            <div class="calendar-header">
+                                <button id="prev" class="btn arrow-btn">&lt</button>
+                                <h4 id="monthYear"></h4>
+                                <button id="next" class="btn arrow-btn">&gt</button>
 
-                            <select id="yearSelect" class="form-select mt-2"></select>
-                        </div>
+                                <select id="yearSelect" class="form-select mt-2"></select>
+                            </div>
 
-                        <div class="calendar-container">
-                            <div id="calendarDays" class="d-flex flex-wrap"></div>
-                        </div>
-                    </div>
-                    <div class="col col-md-5 col-sm-12 calendar-right">
-                        <div class="row text-center pt-3">
-                            <div class="col text-light">
-                                <div><span id="weatherCondition"></span><span id="weatherTemp"></span><img id="weatherImage"/></div>
+                            <div class="calendar-container">
+                                <div id="calendarDays" class="d-flex flex-wrap"></div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col greenbox" >
-                                <h5 class="mb-4">Today bookings:  <span id="totalBookings">0</span></h5>
-                                <div id="bookingList">
-<!--                                    list of bookings-->
-                                </div>
-                                <div  class="text-center">
-                                    <a href="/editday" class="btn btn-success btn-sm greenboxButton" >
-    <!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16"><path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001"/></svg>-->
-                                       + Add
-                                    </a>
-                                    <button id="bookingRefresh" class="btn btn-primary btn-sm greenboxButton">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
-                                            <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
-                                            <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
-                                        </svg>
-                                    </button>
+                        <div class="col-md-5 col-sm-12 calendar-right ">
+                            <div class="row text-center">
+                                <div class="col text-light">
+                                    <div id="weatherDisplay"><span id="weatherCondition"></span><span id="weatherTemp"></span><img id="weatherImage"/></div>
                                 </div>
                             </div>
+                            <div class="row">
+                                    <div class="col greenbox" >
+                                        <table>
+                                            <tr>
+                                                <td> <h5 class="mb-4">Today bookings:  <span id="totalBookings">0</span></h5></td>
+                                                <td>  <a href="/editday" class="btn btn-success btn-sm greenboxButton" >
+                                                    <!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16"><path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001"/></svg>-->
+                                                    + Add
+                                                </a></td>
+                                                <td><button id="bookingRefresh" class="btn btn-primary btn-sm greenboxButton">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2z"/>
+                                                        <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466"/>
+                                                    </svg>
+                                                </button></td>
+                                            </tr>
+                                        </table>
+                                        <div id="bookingList">
+        <!--                                    list of bookings-->
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
-
                     </div>
-                </div>
-                <div class="row mt-5">
-                    <div th:replace="~{fragments/expireTable :: expireTable('Product near expire date:', 'true')}"></div>
-                </div>
-                <div class="row mt-4">
-                    <div class="col">
-                        <div th:if="${expires.isEmpty()}">
-                            <p>There are items in stock that are about to expire</p>
-                        </div>
-                        <div th:if="${ not expires.isEmpty()}">
-                            <p>If you don't have a plan but you dont want to waste it and check for <a href="/chatquery">Ideas</a></p>
-                        </div>
-
+                    <div class="row mt-5">
+                        <div th:replace="~{fragments/expireTable :: expireTable('Product near expire date:', 'true')}"></div>
                     </div>
-                </div>
-            </main>
-            <div class="col"></div>
+                    <div class="row mt-4 mb-5">
+                        <div class="col">
+                            <div th:if="${expires.isEmpty()}">
+                                <p>There are items in stock that are about to expire</p>
+                            </div>
+                            <div th:if="${ not expires.isEmpty()}">
+                                <p>If you don't have a plan but you dont want to waste it and check for <a href="/chatquery">Ideas</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+                <div class="col"></div>
             </div>
         </div>
+
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 <script th:src="@{/scripts/calendar.js}"></script>
