--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -32,6 +32,7 @@
         </main>
         <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 <script>
