--- a/src/main/resources/templates/setup.html
+++ b/src/main/resources/templates/setup.html
@@ -35,6 +35,7 @@
         </main>
         <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
     <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
