--- a/src/main/resources/templates/stock.html
+++ b/src/main/resources/templates/stock.html
@@ -6,7 +6,7 @@
 <body>
 <div th:replace="~{fragments/logoBar :: logoBar('Stock')}"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mb-5">
         <div th:replace="~{fragments/sidebar :: sidebar('stock')}"></div>
         <main class="col-md-8 px-md-3 mt-5">
              <table class="table mt-5" id="all-table">
@@ -22,6 +22,7 @@
         </main>
         <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 
    <div th:replace="~{fragments/scripts :: scripts}"></div>
