--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -50,6 +50,7 @@
         </main>
         <div class="col"></div>
     </div>
+    <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 <div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
