--- a/src/main/resources/templates/wastage.html
+++ b/src/main/resources/templates/wastage.html
@@ -40,6 +40,7 @@
             </main>
             <div class="col"></div>
         </div>
+        <div th:replace="~{fragments/footer :: footer}"></div>
     </div>
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
