--- a/src/main/resources/templates/fragments/logoBar.html
+++ b/src/main/resources/templates/fragments/logoBar.html
@@ -2,7 +2,7 @@
     <div class="container-fluid logo-row">
         <div class="row">
             <div class="col-md-2">
-                <img src="/img/logo.jpg" alt="Leaf Food Logo" class="logo">
+                <a href="/index"><img src="/img/logo.jpg" alt="Leaf Food Logo" class="logo"></a>
             </div>
             <div class="col col-md-1"></div>
             <div class="col col-md-7 d-flex align-items-end">
