--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -21,7 +21,7 @@
         <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'users' ? 'active' : ''}">
           <a class="nav-link" href="/users/list">Users</a>
         </li>
-        <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'reports' ? 'active' : ''}">
+        <li class="nav-item" th:classappend="${activeMenu == 'reports' ? 'active' : ''}">
           <a class="nav-link" href="/reports/main">Reports</a>
         </li>
         <li class="nav-item" sec:authorize="hasRole('ADMIN')" th:classappend="${activeMenu == 'setup' ? 'active' : ''}">
