--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <!-- Card 1 -->
                 <div class="col-md-4 mb-4">
-                    <a href="/index">
+                    <a href="/reports/prediction">
                         <div class="card reportBth">
                             <div class="card-body text-center d-flex justify-content-center align-items-center">
                                 <img src="/img/icons/prediction.png" class="card-img" alt="Prediction">
